version/0.19/_sources/api/solver/_autosummary/settings/premix_adiabatic_temp.rst.txt
:orphan:

.. _premix_adiabatic_temp:

premix_adiabatic_temp
=====================

.. autoclass:: ansys.fluent.core.solver.settings_241.premix_adiabatic_temp.premix_adiabatic_temp
    :show-inheritance:

.. rubric:: Attributes

====================================================   ====================================================

Attribute                                                                                           Summary

====================================================   ====================================================
:ref:`option <option_7>`                                   Select method for calculating material property.

:ref:`value <value_3>`                                                 Specify the constant property value.

:ref:`user_defined_function <user_defined_function>`                         'user_defined_function' child.

====================================================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

