version/0.24/_sources/api/solver/_autosummary/settings/premix_adiabatic_temp.rst.txt
:orphan:

.. _premix_adiabatic_temp:

premix_adiabatic_temp
=====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.premix_adiabatic_temp.premix_adiabatic_temp
    :show-inheritance:

.. rubric:: Attributes

====================================================   ====================================================

Attribute                                                                                           Summary

====================================================   ====================================================
:ref:`option <option_12>`                                  Select method for calculating material property.

:ref:`value <value_11>`                                                Specify the constant property value.

:ref:`user_defined_function <user_defined_function>`                         Specify user defined function.

====================================================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

